[gd_scene load_steps=53 format=2]

[ext_resource path="res://assets/sprites/sprite_biggie-character---running.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/enemies/Biggies.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/enemies/BiggiesState.gd" type="Script" id=3]
[ext_resource path="res://scenes/characters/enemies/EnemyHurtbox.gd" type="Script" id=4]
[ext_resource path="res://scenes/characters/enemies/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/sprite_biggie-character---attack.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/sprite_biggie-character---death.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=80]
radius = 2.0043
height = 27.9914

[sub_resource type="CircleShape2D" id=3]
radius = 112.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 44 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 7 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 7 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "running",
"speed": 5.0
} ]

[node name="Biggies" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 100.0

[node name="BiggiesState" type="Node" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.38419e-07, 2 )
rotation = -1.57187
shape = SubResource( 80 )

[node name="DetectionBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]
shape = SubResource( 3 )

[node name="EnemyHurtbox" type="Area2D" parent="." groups=["hittable"]]
visible = false
collision_layer = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
position = Vector2( 0, -24 )
shape = SubResource( 2 )

[node name="PathTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 64

[node name="Pivot" type="Node2D" parent="."]

[node name="HitBox" type="Area2D" parent="Pivot"]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HitBox"]
visible = false
position = Vector2( 0, -20 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot"]
position = Vector2( 0, -24 )
frames = SubResource( 5 )
animation = "running"
frame = 7
speed_scale = 1.75
playing = true

[connection signal="body_entered" from="DetectionBox" to="." method="_on_DetectionBox_body_entered"]
[connection signal="hit" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_hit"]
[connection signal="area_entered" from="Pivot/HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="Pivot/HitBox" to="." method="_on_HitBox_area_exited"]
[connection signal="animation_finished" from="Pivot/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="Pivot/AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
